--- a/app/src/main/res/layout/layout_quan_an.xml
+++ b/app/src/main/res/layout/layout_quan_an.xml
@@ -34,6 +34,7 @@
         >
 
         <Button
+            android:textColor="@color/colorWhite"
             android:id="@+id/btnXemMon"
             android:layout_width="300dp"
             android:layout_height="60dp"
@@ -44,6 +45,7 @@
             android:textAllCaps="false"/>
 
         <Button
+            android:textColor="@color/colorWhite"
             android:id="@+id/btnThemMon"
             android:layout_width="300dp"
             android:layout_height="60dp"
@@ -54,16 +56,18 @@
             android:textAllCaps="false"/>
 
         <Button
+            android:textColor="@color/colorWhite"
             android:id="@+id/btnSuaMon"
             android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_marginTop="@dimen/size15dp"
             android:background="@drawable/duongvien_xanh"
-            android:text="Sửa món ăn"
-            android:textSize="20sp"
+            android:text= "Sửa món ăn"
+            android:textSize= "20sp"
             android:textAllCaps="false"/>
 
         <Button
+            android:textColor="@color/colorWhite"
             android:id="@+id/btnXoaMon"
             android:layout_width="300dp"
             android:layout_height="60dp"
@@ -74,6 +78,7 @@
             android:textAllCaps="false"/>
 
         <Button
+            android:textColor="@color/colorWhite"
             android:id="@+id/btnXemDonHang"
             android:layout_width="300dp"
             android:layout_height="60dp"
