--- a/app/src/main/res/layout/layout_sua_mon.xml
+++ b/app/src/main/res/layout/layout_sua_mon.xml
@@ -84,6 +84,7 @@
         android:layout_marginTop="350dp">
 
         <Button
+            android:textColor="@color/colorWhite"
             android:id="@+id/btnSuaMonLayoutSua"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
