--- a/app/src/main/res/layout/layout_them_mon.xml
+++ b/app/src/main/res/layout/layout_them_mon.xml
@@ -92,6 +92,7 @@
         android:layout_marginTop="480dp">
 
         <Button
+            android:textColor="@color/colorWhite"
             android:id="@+id/btnThemMonLayoutThemMon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
