--- a/app/src/main/res/layout/line_cart.xml
+++ b/app/src/main/res/layout/line_cart.xml
@@ -26,7 +26,7 @@
         
         <LinearLayout
             android:orientation="vertical"
-            android:layout_weight="9"
+            android:layout_weight="8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             >
@@ -34,7 +34,6 @@
 
             
             <TextView
-
                 android:textColor="@color/colorBlack"
                 android:id="@+id/cart_item_name"
                 android:layout_marginLeft="10dp"
@@ -45,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-
+                android:layout_marginTop="3dp"
                 android:textColor="@color/colorBlack"
                 android:id="@+id/cart_item_price"
                 android:layout_marginLeft="10dp"
@@ -56,22 +55,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:layout_marginTop="3dp"
                 android:textColor="@color/colorBlack"
                 android:id="@+id/cart_item_name_res"
                 android:layout_marginLeft="10dp"
                 android:gravity="center_vertical|start"
                 android:textStyle="italic"
-                android:text="mm"
+                android:text="ten quan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             
         </LinearLayout>
+
+
         <TextView
             android:id="@+id/cart_item_count"
             android:gravity="center"
             android:background="@drawable/chamtron"
             android:layout_gravity="center_vertical|end"
-            android:layout_marginRight="26dp"
+            android:layout_marginRight="46dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:textColor="@color/colorWhite"
@@ -81,6 +83,14 @@
             />
 
 
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/cart_item_cancel_food"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_cancel_24dp" />
 
 </RelativeLayout>
