--- a/app/src/main/res/layout/layout_them_quan.xml
+++ b/app/src/main/res/layout/layout_them_quan.xml
@@ -36,8 +36,8 @@
             android:hint="Email"
             android:textColorHint="#FAF8F8"
             android:id="@+id/edtEmailQuan"
-            android:textColor="#FFFCFC"
-            android:textSize="20sp"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp"
             android:inputType="textEmailAddress"
             app:met_baseColor="#FFFFFF"
             app:met_floatingLabel="highlight"
@@ -52,8 +52,8 @@
             android:hint="Mật khẩu"
             android:textColorHint="#FAF8F8"
             android:id="@+id/edtPassQuan"
-            android:textColor="#FFFCFC"
-            android:textSize="20sp"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp"
             android:inputType="textPassword"
             app:met_baseColor="#FFFFFF"
             app:met_floatingLabel="highlight"
@@ -69,8 +69,8 @@
             android:hint="Tên quán"
             android:textColorHint="#FAF8F8"
             android:id="@+id/edtTenQuan"
-            android:textColor="#FFFCFC"
-            android:textSize="20sp"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp"
             android:inputType="text"
             app:met_baseColor="#FFFFFF"
             app:met_floatingLabel="highlight"
@@ -85,8 +85,8 @@
             android:hint="Số điện thoại"
             android:textColorHint="#FAF8F8"
             android:id="@+id/edtPhoneQuan"
-            android:textColor="#FFFCFC"
-            android:textSize="20sp"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp"
             android:inputType="phone"
             app:met_baseColor="#FFFFFF"
             app:met_floatingLabel="highlight"
@@ -103,8 +103,8 @@
             android:hint="Địa chỉ"
             android:textColorHint="#FAF8F8"
             android:id="@+id/edtAddressQuan"
-            android:textColor="#FFFCFC"
-            android:textSize="20sp"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp"
             android:inputType="text"
             app:met_baseColor="#FFFFFF"
             app:met_floatingLabel="highlight"
