--- a/app/src/main/res/layout/layout_forgot_pass.xml
+++ b/app/src/main/res/layout/layout_forgot_pass.xml
@@ -39,7 +39,7 @@
         android:layout_marginRight="@dimen/size15dp"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
-        android:textSize="24dp"
+        android:textSize="25sp"
         app:met_baseColor="@color/colorPrimary"
         app:met_floatingLabel="highlight"
         app:met_primaryColor="@color/colorPrimary"
