--- a/app/src/main/res/layout/layout_food_detail.xml
+++ b/app/src/main/res/layout/layout_food_detail.xml
@@ -152,7 +152,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
                     <RatingBar
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -162,11 +165,28 @@
                         android:isIndicator="true"
                         android:stepSize="0.5"
                         />
+                    <ImageView
+                        android:padding="5dp"
+                        android:id="@+id/share"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="110dp"
+                        android:tint="#01579B"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:src="@drawable/ic_share_black_24dp"/>
+                </LinearLayout>
+
+                    <LinearLayout
+                        android:weightSum="10"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                     <TextView
+                        android:layout_weight="8.7"
                         android:background="@color/colorWhite"
                         android:id="@+id/food_description"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:lineSpacingMultiplier="1.5"
                         android:paddingLeft="12dp"
@@ -174,6 +194,17 @@
                         android:text="Description"
                         android:textColor="#000"
                         android:textSize="16sp" />
+
+                    <ImageView
+                        android:id="@+id/fav"
+                        android:tint="#D50000"
+                        android:paddingTop="10dp"
+                        android:layout_weight="1.3"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/ic_favorite_border_black_24dp"/>
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
@@ -189,6 +220,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/cacdanhgia"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
