--- a/app/src/main/res/layout/line_food.xml
+++ b/app/src/main/res/layout/line_food.xml
@@ -12,24 +12,19 @@
     <ImageView
         android:id="@+id/ivHinh2"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="190dp"
         android:src="@color/colorWhite"
         android:scaleType="centerCrop"/>
 
     <LinearLayout
-        android:weightSum="10"
-        android:layout_marginTop="150dp"
+        android:gravity="center"
+        android:layout_marginTop="160dp"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:background="#630E0D0E"
-        android:gravity="center_horizontal"
         android:orientation="horizontal"
         >
-    <LinearLayout
-        android:layout_marginLeft="15dp"
-        android:layout_weight="9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tvtenMon2"
             android:layout_width="wrap_content"
@@ -46,16 +41,8 @@
             android:text="Ten quan"
             android:textSize="20sp"
             android:textColor="@color/colorWhite"/>
-    </LinearLayout>
 
-        <ImageView
-            android:layout_weight="1"
-            android:paddingTop="2dp"
-            android:id="@+id/fav"
-            android:src="@drawable/ic_favorite_border_black_24dp"
-            android:layout_width="50dp"
-            android:tint="@color/colorWhite"
-            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 
