--- a/app/src/main/res/layout/content_khachhang.xml
+++ b/app/src/main/res/layout/content_khachhang.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,11 +8,24 @@
     tools:context=".KhachHangActivity"
     tools:showIn="@layout/app_bar_khachhang">
 
-    <ListView
-        android:id="@+id/lvFood"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0sp"></ListView>
+        android:layout_height="wrap_content">
+        
+        <com.daimajia.slider.library.SliderLayout
+            android:id="@+id/slider"
+            android:layout_width="match_parent"
+            android:layout_height="180dp">
 
-</android.support.constraint.ConstraintLayout>
+        </com.daimajia.slider.library.SliderLayout>
+
+        <ListView
+            android:id="@+id/lvFood"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0sp"></ListView>
+    </LinearLayout>
+
+</android.support.v4.widget.SwipeRefreshLayout>
