--- a/app/src/main/res/layout/layout_food_detail.xml
+++ b/app/src/main/res/layout/layout_food_detail.xml
@@ -65,6 +65,19 @@
         app:pressedTranslationZ="12dp"
         app:useCompatPadding="true" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnShare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_share_black_24dp"
+        android:backgroundTint="@color/colorText"
+        app:elevation="5dp"
+        app:layout_anchor="@id/bar_layout"
+        app:layout_anchorGravity="bottom|center"
+        app:pressedTranslationZ="12dp"
+        android:tint="@color/com_facebook_blue"
+        app:useCompatPadding="true" />
+
     <android.support.v4.widget.NestedScrollView
         android:background="@color/colorWhite"
         android:id="@+id/nestedScrollView"
@@ -94,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="25dp"
                         android:paddingLeft="12dp"
-                        android:text="Food Name"
+                        android:text=""
                         android:textColor="#1A554E"
                         android:textSize="30sp"
                         android:textStyle="bold" />
@@ -167,13 +180,13 @@
                         />
                     <ImageView
                         android:padding="5dp"
-                        android:id="@+id/share"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginLeft="110dp"
-                        android:tint="#01579B"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:src="@drawable/ic_share_black_24dp"/>
+                        android:id="@+id/fav"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginLeft="100dp"
+                        android:tint="#D50000"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:src="@drawable/ic_favorite_border_black_24dp"/>
                 </LinearLayout>
 
                     <LinearLayout
@@ -195,14 +208,7 @@
                         android:textColor="#000"
                         android:textSize="16sp" />
 
-                    <ImageView
-                        android:id="@+id/fav"
-                        android:tint="#D50000"
-                        android:paddingTop="10dp"
-                        android:layout_weight="1.3"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/ic_favorite_border_black_24dp"/>
+
                     </LinearLayout>
 
 
@@ -226,7 +232,7 @@
                     android:layout_marginTop="10dp"
                     android:paddingLeft="12dp"
                     android:paddingBottom="12dp"
-                    android:text="Các đánh giá về món ăn"
+                    android:text=""
                     android:textColor="#1A554E"
                     android:textSize="20sp"
                     android:textStyle="bold" />
