--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,5 +6,7 @@
     <dimen name="size25dp">25dp</dimen>
     <dimen name="size30dp">30dp</dimen>
     <dimen name="size40dp">40dp</dimen>
+    
+    <integer name="animation_duration_medium">1000</integer>
 
 </resources>
