--- a/app/src/main/res/anim/item_animation_from_left.xml
+++ b/app/src/main/res/anim/item_animation_from_left.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:duration="@integer/animation_duration_medium"
     >
 
+    <translate
+        android:fromXDelta="-100%"
+        android:toYDelta="0"
 
+        />
     <alpha
         android:fromAlpha="0"
         android:toAlpha="1"
 
         />
-    <scale
-        android:fromYScale="0.5"
-        android:fromXScale="0.5"
-        android:toXScale="1"
-        android:toYScale="1"
-        />
+
 
 
 </set>
