--- a/app/src/main/res/layout/content_khachhang.xml
+++ b/app/src/main/res/layout/content_khachhang.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider"
             android:layout_width="match_parent"
-            android:layout_height="180dp">
+            android:layout_height="170dp">
 
         </com.daimajia.slider.library.SliderLayout>
 
@@ -28,4 +28,4 @@
             android:dividerHeight="0sp"></ListView>
     </LinearLayout>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</RelativeLayout>
