--- a/app/src/main/res/layout/activity_khachhang.xml
+++ b/app/src/main/res/layout/activity_khachhang.xml
@@ -19,7 +19,7 @@
         app:itemIconTint="@color/colorWhite"
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_khachhang"
