--- a/app/src/main/res/layout/line_cart.xml
+++ b/app/src/main/res/layout/line_cart.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:layout_marginTop="@dimen/size10dp"
+<android.support.v7.widget.CardView
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_marginBottom="16dp"
     app:cardElevation="4dp"
     android:background="@color/colorWhite">
 
@@ -86,11 +86,6 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/cart_item_cancel_food"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_cancel_24dp" />
 
-</RelativeLayout>
+
+</android.support.v7.widget.CardView>
