--- a/app/src/main/res/layout/layout_xoa_quan.xml
+++ b/app/src/main/res/layout/layout_xoa_quan.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="Xóa tài khoản Quán"
         android:layout_centerHorizontal="true"
-        android:textSize="35sp"
+        android:textSize="30sp"
         android:textColor="@color/colorWhite"
         android:fontFamily="@font/nabila"
 
@@ -58,6 +58,8 @@
             android:layout_marginLeft="65dp">
 
             <Button
+                android:layout_gravity="center"
+                android:textColor="@color/colorWhite"
                 android:id="@+id/btnXoaQuan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
